# docs/swagger.json
@@ -56,6 +56,68 @@
                 }
             }
         },
+        "/backend/context": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Context"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "X-Context-Id",
+                        "name": "string",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.PunqContext"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Context"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "X-Context-Id",
+                        "name": "string",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.PunqContext"
+                        }
+                    }
+                }
+            }
+        },
         "/backend/context/all": {
             "get": {
                 "security": [
@@ -95,71 +157,20 @@
                 "tags": [
                     "Context"
                 ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "X-Context-Id",
+                        "name": "string",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/dtos.ClusterInfoDto"
-                        }
-                    }
-                }
-            }
-        },
-        "/backend/context/{ctxId}": {
-            "get": {
-                "security": [
-                    {
-                        "Bearer": []
-                    }
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Context"
-                ],
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "ctxId of the context-id",
-                        "name": "ctxId",
-                        "in": "path"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/dtos.PunqContext"
-                        }
-                    }
-                }
-            },
-            "delete": {
-                "security": [
-                    {
-                        "Bearer": []
-                    }
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Context"
-                ],
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "ID of the context",
-                        "name": "ctxId",
-                        "in": "path"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/dtos.PunqContext"
                         }
                     }
                 }
@@ -7019,6 +7030,7 @@
             "required": [
                 "access",
                 "context",
+                "contextHash",
                 "id",
                 "name"
             ],
@@ -7030,6 +7042,9 @@
                     }
                 },
                 "context": {
+                    "type": "string"
+                },
+                "contextHash": {
                     "type": "string"
                 },
                 "id": {
